# ehwe

./: .env  .gitignore  .gitmodules  AUTHORS  NEWS  README.md  wiki
doc/: start_wiki.sh  wiki_config.txt
doc/plugins/: JavaScript.hs
src/: .gdb.tap.sh_profile.rc  .gitignore  .vim.custom  CMakeLists.txt  README.md  config.h.in  driver.h  main.c  main.h  opts.c  opts.h  opts_help.c  serial.c  serial.h
src/adapters/: CMakeLists.txt  adapters.c  adapters.h  adapters_config.h.in  paraport.c  paraport.h
src/adapters/buspirate/: CMakeLists.txt  buspirate.c  buspirate_config.h.in  i2c_driver.c  i2c_raw.c  local.h  modechange.c  spi_driver.c  spi_raw.c
src/adapters/buspirate/include/: buspirate.h
src/adapters/lxi/: .gitignore  CMakeLists.txt  i2c_driver.c  local.h  lxi.c  lxi_config.h.in  spi_driver.c
src/adapters/lxi/include/: lxi.h
src/apis/: CMakeLists.txt  apis.c  apis.h  ehwe.c  ehwe.h  ehwe_i2c_device.c  stm32.c  stm32.h
src/apis/include/: ehwe_i2c_device.h  stm32f10x.h
src/cmake/toolchains/: Android.cmake
src/devices/: CMakeLists.txt  buspirate.c  buspirate.h  buspirate_initfini.c  devices.c  devices.h  devices_config.h.in  devices_initfini.c  paraport.c  paraport.h  paraport_initfini.c
src/devices/buspirate/: .gitignore  CMakeLists.txt  buspirate.c  buspirate_config.h.in  i2c_driver.c  i2c_raw.c  local.h  modechange.c  spi_driver.c  spi_raw.c
src/devices/buspirate/include/: buspirate.h
src/devices/lxi/: CMakeLists.txt  i2c_driver.c  local.h  lxi.c  spi_driver.c
src/devices/lxi/include/: lxi.h
src/doc/: .gitignore  CMakeLists.txt  common.h2m  doc.c  etrace.h2m  interactive-help.page  manpage.md
src/doc/include/: doc.h
src/interfaces/: CMakeLists.txt  ehwe.c  ehwe.h  ehwe_i2c_device.c  interfaces.c  interfaces.h  stm32.c  stm32.h
src/interfaces/include/: ehwe_i2c_device.h  stm32f10x.h
wiki/: README.md  start_wiki.sh  wiki.conf  wiki_config.txt
wiki/plugins/: Gnuplot.hs
